2009-03-23: William Ting
- set default output directory if destination directory is missing
- copies corresponding named raw files to same destination / filename as jpg

2009-02-22: William Ting
- added test images
- handles images with bad or missing timestamps
- added options: verbosity, quiet, custom template, dry-run/simulation

2009-02-21: William Ting
- initial file load
- project currently in alpha status