@@ -1,3 +1,8 @@
+2009-03-26: William Ting
+- implemented move option
+- check for destination collision
+- refactored process_list() to be more legible
+
 2009-03-23: William Ting
 - set default output directory if destination directory is missing
 - copies corresponding named raw files to same destination / filename as jpg
